<resources>
    <string name="app_name">DentaMatch</string>
    <string name="maps_api_key">AIzaSyAhA4pk57QtTynvuqTgW_YDHzJdL1zKv3M</string>
    <string name="mixpanel_token">b02345abf885907d987ec5a475135671</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the \n printing and typesetting industry.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="font_light" translatable="false">Roboto-Light.ttf</string>
    <string name="font_regular" translatable="false">Roboto-Regular.ttf</string>
    <string name="font_medium" translatable="false">Roboto-Medium.ttf</string>
    <string name="font_bold" translatable="false">Roboto-Bold.ttf</string>
    <string name="skip_button">SKIP</string>
    <string name="done_button">Done</string>
    <string name="digits_alpha_numeric_only">0123456789 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_alpha_numeric_email">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_.</string>
    <string name="digits_other">0123456789abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ-/,</string>
    <string name="digits_alpha_numeric_special">0123456789 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@-_./:;,&amp;amp;</string>
    <string name="digits_licence">QWERTYUIOPASDFGHJKLZXCVBNM-qwertyuiopasdfghjklzxcvbnm0123456789</string>
    <string name="digits_others">0123456789 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,</string>
    <string name="blank_email_alert">Email Id can not be left blank.</string>
    <string name="user_name_label">name</string>
    <string name="blank_profile_photo_alert">Please upload your profile photo.</string>
    <string name="blank_password_alert">Password can not be left blank.</string>
    <string name="blank_fname_alert">First Name text field can not be left blank.</string>
    <string name="blank_lname_alert">Last Name text field can not be left blank.</string>
    <string name="blank_location_alert">Preferred Job Location can not be left blank.</string>
    <string name="blank_postal_code">Unable to find postal code in the address, please retry or choose near by location on map.</string>
    <string name="blank_tnc_alert">Please accept Terms and Conditions/Privacy Policy.</string>
    <string name="valid_email_alert">Please provide a valid Email Id.</string>
    <string name="valid_mobile_alert">Please provide a valid phone number of 10 digits.</string>
    <string name="password_min_length_alert">Password should be 6&#8211;25 characters long.</string>
    <string name="password_contains_space">Password can not contain spaces.</string>
    <string name="error_something_wrong">Something went wrong!</string>
    <string name="error_empty_address">Please select an address.</string>
    <string name="alert_empty_notification">You don’t have any Notifications right now.</string>
    <string name="msg_reference_name_1_blank">Reference 1 name cannot be blank. </string>
    <string name="msg_reference_name_2_blank">Reference 2 name cannot be blank. </string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="preferred_location_label">Preferred Job Location</string>
    <string name="login_label">LOGIN</string>
    <string name="send_label">Send</string>
    <string name="show_password">Show</string>
    <string name="hide_password">Hide</string>
    <string name="register_label">REGISTER</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="fname_label">First Name</string>
    <string name="lname_label">Last Name</string>
    <string name="register_help_info">Helps Dental Offices find you easily.</string>
    <string name="login_info_label">Login using your registered email</string>
    <string name="label_accept_term_n_condition">I agree to the Terms and Conditions and Privacy Policy </string>
    <string name="forgot_password_title">Enter your email address below and we’ll send you the instructions on how to change your password.</string>
    <string name="profile_completion">Your profile has been created successfully. \n \n Let\'s set your availability so that dental offices can get to know about your timings.</string>
    <string name="old_password_label">Old Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="save_label">Save</string>
    <string name="label_take_photo">Take photo</string>
    <string name="label_choose_gallery">Choose from gallery</string>
    <string name="dental_state_board">ADD DENTAL STATE BOARD</string>
    <string name="label_licence">LICENSE</string>
    <string name="label_licence_number">License Number</string>
    <string name="label_upload_photo">Upload Photo</string>
    <string name="label_state">State</string>
    <string name="label_licence_state">License State</string>
    <string name="label_next">Next</string>
    <string name="label_update">UPDATE</string>
    <string name="text_camera_permision">Camera and storage permission is required to take photos of the user.</string>
    <string name="decode_stream_alert">Unable to parse this image.</string>
    <string name="label_not_now">Not now</string>
    <string name="profile1_text">Let’s start with creating your profile.</string>
    <string name="label_job_title">Current Job Title</string>
    <string name="alert_profile">Completing your job profile will help you stand out to potential Employers</string>
    <string name="label_job_title_only">Job Title</string>
    <string name="ok">OK</string>
    <string name="block">BLOCK</string>
    <string name="cancel">Cancel</string>
    <string name="msg_block_alert">This Recruiter is BLOCKED and will no longer be able to see your profile or send you messages</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nav_job">Jobs</string>
    <string name="nav_tracks">Saved</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_message">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="where_you_work">Where do you work?</string>
    <string name="where_did_you_study">Where did you study?</string>
    <string name="label_relevant_exp">Relevant work experience strengthens \n your profile</string>
    <string name="year_of_experience">Time at This Job</string>
    <string name="office_name">Office Name</string>
    <string name="office_address">Office Address</string>
    <string name="city">City</string>
    <string name="reference">Reference 1</string>
    <string name="reference2">Reference 2</string>
    <string name="reference_delete">Delete Reference</string>
    <string name="experience_delete">Delete This Job</string>
    <string name="reference_name">Reference Name (Optional)</string>
    <string name="reference_mobile">Reference Mobile No. (Optional)</string>
    <string name="reference_email">Reference Email (Optional)</string>
    <string name="year">Year</string>
    <string name="month">month</string>
    <string name="exp_years">Years</string>
    <string name="exp_months">Months</string>
    <string name="txt_months">Months</string>
    <string name="txt_single_year">yr</string>
    <string name="txt_multiple_years">yrs</string>
    <string name="txt_single_month">month</string>
    <string name="txt_multiple_months">months</string>
    <string name="authentication_error">Authentication error, please login again.</string>
    <string name="server_error">There is some issue connecting with server.</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="add_more_reference">Add More References</string>
    <string name="add_more_exp">ADD ANOTHER JOB</string>
    <string name="header_work_exp">EMPLOYMENT HISTORY</string>
    <string name="header_create_profile">CREATE PROFILE</string>
    <string name="header_privacy">PRIVACY POLICY</string>
    <string name="header_term">TERMS &amp; CONDITIONS</string>
    <string name="header_forgot_password">FORGOT PASSWORD</string>
    <string name="header_certification">CERTIFICATIONS</string>
    <string name="header_affiliation">PROFESSIONAL AFFILIATIONS</string>
    <string name="header_about_me">ABOUT ME</string>
    <string name="header_job_detail">JOB DETAILS</string>
    <string name="header_skills_exp">KEY SKILLS &amp; EXPERIENCE</string>
    <string name="header_schooling_exp">Education/Training</string>
    <string name="autocomplete_hint">Search Places</string>
    <string name="get_started">GET STARTED</string>
    <string name="hint_type_to_search">Enter School</string>
    <string name="hint_year_of_graduation">Year Of Graduation</string>
    <string name="hi_user">Hi %1$s</string>
    <string name="validity_date_string">Validity Date</string>
    <string name="cetification_title">Update Certifications</string>
    <string name="about_me_title">Executive Summary </string>
    <string name="alert_pervious_date">Please select a valid date.</string>
    <string name="write_description">Introduction yourself and tell us what you\'re looking for. What can you bring to the office?</string>
    <string name="lable_complete_profile">Complete Profile</string>
    <string name="blank_licence_number">Licence number can not be blank.</string>
    <string name="licence_number_length">Licence Number should not exceed 15 characters.</string>
    <string name="licence_number_blnk_space_alert">Licence number should not contain blank spaces</string>
    <string name="licence_number_hyfen_alert">Licence number can not begin or end with the hyphen (-) </string>
    <string name="blank_state_alert">State field can not be left blank.</string>
    <string name="state_max_length">State can not be exceed 30 characters</string>
    <string name="invalid_exp_selection">Experience can never be zero.</string>
    <string name="blank_job_title_alert">Please select job title</string>
    <string name="blank_office_name_alert">Office name can never be blank</string>
    <string name="blank_office_addrerss_alert">Office address can never be blank</string>
    <string name="blank_city_alert">City can never be blank</string>
    <string name="office_name_length_alert">Office name length can not exceed 30 characters</string>
    <string name="office_address_length_alert">Office address length can not exceed 30 characters</string>
    <string name="city_length_alert">City name length can not exceed 30 characters</string>
    <string name="edit_label">Edit</string>
    <string name="add_certificate">Add certificate</string>
    <string name="sun">Su</string>
    <string name="mon">Mo</string>
    <string name="tue">Tu</string>
    <string name="wed">We</string>
    <string name="thu">Th</string>
    <string name="fri">Fr</string>
    <string name="sat">Sa</string>
    <string name="calendar_sun">Su</string>
    <string name="calendar_mon">Mo</string>
    <string name="calendar_tue">Tu</string>
    <string name="calendar_wed">We</string>
    <string name="calendar_thu">Th</string>
    <string name="calendar_fri">Fr</string>
    <string name="calendar_sat">Sa</string>
</resources>