<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_bottom_sheet"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:background="@color/cell_color">

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/bottom_sheet_picker_tv_cancel"
            style="@style/text_view_normal"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"
            app:customFont="@string/font_regular" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/bottom_sheet_picker_tv_done"

            style="@style/text_view_normal"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_medium"
            android:text="@string/done_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal"
            app:customFont="@string/font_bold" />

    </RelativeLayout>

    <DatePicker
        android:id="@+id/bottom_sheet_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:gravity="center"
        >

    </DatePicker>
</LinearLayout>