<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_left" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/display_current_date"
            style="@style/text_view_normal"
            android:layout_width="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="current date"
            android:textColor="@color/graish_brown_color"
            app:customFont="@string/font_regular" />

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"

            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/mon"
            style="@style/text_view_normal"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/tue"
            style="@style/text_view_normal"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/wed"
            style="@style/text_view_normal"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/thu"
            style="@style/text_view_normal"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/fri"
            style="@style/text_view_normal"

            android:layout_width="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/sat"
            style="@style/text_view_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/graish_brown_opacity_color"
            android:textStyle="bold" />
    </LinearLayout>

    <com.appster.dentamatch.widget.ExpandableGridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:verticalSpacing="3dp" />
</LinearLayout>
</layout>