<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cell_height"
            android:background="@color/cell_color">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentTop="true"
                android:background="@color/line_divider" />

            <com.appster.dentamatch.widget.CustomTextView
                android:id="@+id/tv_certificates_name"
                style="@style/text_view_normal"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_normal"
                android:text="@string/dental_state_board"
                android:textColor="@color/cell_text_color"
                android:textSize="@dimen/text_size_13"
                android:textAllCaps="true"
                app:customFont="@string/font_medium" />


            <com.appster.dentamatch.widget.CustomTextView
                android:id="@+id/tv_edit_cell"
                style="@style/text_view_normal"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:text="@string/edit_label"
                android:textColor="@color/cerulean_color"
                android:textSize="@dimen/text_size_13"
                app:customFont="@string/font_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/line_divider" />


        </RelativeLayout>

        <com.appster.dentamatch.widget.CustomTextView
            android:id="@+id/tv_add_certificates"
            style="@style/text_view_normal"
            android:layout_margin="@dimen/margin_normal"
            android:drawableLeft="@drawable/ic_plus_exp"
            android:drawablePadding="@dimen/padding_drawable"
            android:gravity="center"
            android:text="@string/dental_state_board"
            android:textColor="@color/cell_text_color"
            android:textSize="@dimen/text_size_normal"
            app:customFont="@string/font_regular" />


    </LinearLayout>
</layout>